chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: sumon
spec:
  selector:
    app: chat-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
